--- a/style.css
+++ b/style.css
@@ -1,20 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
+
 body{
-    background: linear-gradient(#000, #1a1a5f);
+    background-image: linear-gradient(rgba(245, 155, 209, 0.4), rgba(245, 155, 209, 0.4)), url('images/plants.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     background-attachment: fixed;
-    color: #fff;
+    color: #431e2e;
+    font-family: "Afacad Flux", sans-serif;
 }
 
 a{
     text-decoration: none;
-    color: #c9c9fc;
+    color: #431e2e;
+}
+
+ul{
+    padding: 0;
 }
 
 ul li{
     list-style: none;
 }
 
-nav{
-    
+nav a{
+    color: #431e2e;
 }
 
 nav ul{
@@ -23,6 +32,8 @@ nav ul{
 
 nav ul li{
     flex: 1;
+    text-align: center;
+    font-size: 1.5em;
 }
 
 main{
@@ -31,8 +42,7 @@ main{
 }
 
 #websites ul li{
-    margin: 10px;
-    margin-left: 0;
+    margin: 10px 0;
 }
 
 .construction{
