--- a/style.css
+++ b/style.css
@@ -1,29 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
 
 body{
-    background-image: linear-gradient(rgba(245, 155, 209, 0.4), rgba(245, 155, 209, 0.4)), url('images/plants.jpg');
+    background-image: linear-gradient(#f59bd166, #f59bd166), url('images/plants.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    color: #431e2e;
+    color: #3d1c2a;
     font-family: "Afacad Flux", sans-serif;
-}
-
-a{
-    text-decoration: none;
-    color: #431e2e;
-}
-
-ul{
+    min-height: 100vh;
+    margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
-ul li{
-    list-style: none;
-}
-
-nav a{
-    color: #431e2e;
+nav{
+    margin-top: 20px;
 }
 
 nav ul{
@@ -36,15 +28,86 @@ nav ul li{
     font-size: 1.5em;
 }
 
+ul{
+    padding: 0;
+}
+
+ul li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: #3d1c2a;
+}
+
+nav a{
+    padding: 8px;
+    border-radius: 1.5em;
+    transition: all 0.5s;
+}
+
+nav a:hover{
+    background-color: #58374b;
+    color: #f2d3e5;
+    transition: all 0.5s;
+}
+
 main{
-    margin-top: 100px;
+    margin-top: 30px;
     text-align: center;
+    flex: 1;
 }
 
-#websites ul li{
+main h1, main h2, main h3, main p{
+    margin: 0;
+    margin-top: 10px;
+}
+
+main h2{
+    font-size: 1.7em;
+}
+
+main h3{
+    font-size: 1.5em;
+}
+
+main p{
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 1.4em;
+}
+
+main ul li{
     margin: 10px 0;
+    font-size: 1.3em;
+    margin-top: 0;
 }
 
-.construction{
-    
+main img{
+    height: 150px;
+    margin: 10px;
+}
+
+hr{
+    width: 50%;
+    border: 1px solid #3d1c2a;
+}
+
+footer{
+    position: relative;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin-inline: auto;
+    width: fit-content;
+    min-height: 50px;
+    margin-bottom: 20px;
+}
+
+footer p{
+    margin: 0;
+    text-align: center;
 }
