--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     background-image: linear-gradient(#f59bd166, #f59bd166), url(/images/plants.jpg);
     background-size: 100% 100%;
@@ -14,39 +20,34 @@ body{
     flex-direction: column;
 }
 
-.hamburger {
-    display: none;
-}
-
-.bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: #101010;
-}
-
 nav{
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 1.5rem;
 }
 
 nav ul{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav ul li{
-    flex: 1;
-    text-align: center;
-    font-size: 1.5em;
+    margin: 0 20px;
 }
 
-ul{
-    padding: 0;
+nav ul li a{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #3d1c2a;
 }
 
-ul li{
+nav ul li a:hover{
+    color: #f2d3e5;
+}
+
+li{
     list-style: none;
 }
 
@@ -55,16 +56,18 @@ a{
     color: #3d1c2a;
 }
 
-nav a{
-    padding: 8px;
-    border-radius: 1.5em;
-    transition: all 0.5s;
+.hamburger{
+    display: none;
 }
 
-nav a:hover{
-    background-color: #58374b;
-    color: #f2d3e5;
-    transition: all 0.5s;
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #3d1c2a;
 }
 
 main{
@@ -108,6 +111,7 @@ main img{
 hr{
     width: 50%;
     border: 1px solid #3d1c2a;
+    margin: auto;
 }
 
 footer{
@@ -126,10 +130,68 @@ footer p{
     text-align: center;
 }
 
-@media (max-width: 1024px){
+@media only screen and (max-width: 768px){
+    nav{
+        justify-content: right;
+    }
+    
+    nav ul{
+        position: fixed;
+        top: -100%;
+        left: 0;
+        flex-direction: column;
+        background-color: #58374bcc;
+        width: 100%;
+        border-radius: 5px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+    }
 
-}
+    nav ul.active{
+        top: 0;
+    }
 
-@media (max-width: 600px){
+    nav ul li a{
+        padding: 15px 0;
+        color: #fff;
+    }
 
+    .nav-item{
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+    }
+
+    .nav-link{
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+    }
+
+    .nav-link:hover{
+        background-color: #3d1c2aa2;
+        width: 100%;
+        color: #fff;
+        border-radius: 5px;
+    }
+
+    .hamburger{
+        display: block;
+        cursor: pointer;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+        background-color: #fff;
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+        background-color: #fff;
+    }
 }
