--- a/style.css
+++ b/style.css
@@ -29,12 +29,15 @@ nav{
 
 nav ul{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    width: 100%;
 }
 
 nav ul li{
     margin: 0 20px;
+    flex: 1;
+    text-align: center;
 }
 
 nav ul li a{
@@ -140,7 +143,7 @@ footer p{
         top: -100%;
         left: 0;
         flex-direction: column;
-        background-color: #58374bcc;
+        background-color: #58374bd9;
         width: 100%;
         border-radius: 5px;
         text-align: center;
