Finished garden transformation

--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -1,39 +1,45 @@
 body{
-    background-image: none;
-    color: #3d1c2a;
+    background-image: url(../images/day-garden.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    color: #fff;
     font-family: "Afacad Flux", sans-serif;
     min-height: 100vh;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
+    transition: background-image 1s ease-in-out, opacity 1s ease-in-out;
+}
+
+.fade {
+    opacity: 0;
+}
+
+.fade-in {
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
 }
 
 nav{
-    background-image: linear-gradient(#f59bd166, #f59bd166), url(../images/plants.jpg);
-    background-size: cover;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem 1.5rem;
 }
 
 nav ul{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     width: 100%;
 }
 
 nav ul li{
     margin: 0 20px;
     flex: 1;
-    text-align: center;
+    text-align: left;
 }
 
 nav ul li a{
     font-size: 1.5rem;
     font-weight: 400;
+    background-color: #0a0f2c9d;
 }
 
 li{
@@ -48,134 +54,41 @@ a{
 }
 
 a:hover{
-    background-color: #3d1c2a;
-}
-
-.hamburger{
-    display: none;
-}
-
-.bar{
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: #fff;
+    background-color: #0a0f2c;
 }
 
 main{
     margin-top: 0px;
-    text-align: center;
+    text-align: right;
     flex: 1;
 }
 
-h1{
-    margin-bottom: 0;
-}
-
-hr{
-    border: 1px solid #3d1c2a;
-    margin-bottom: 30px;
-    width: 50%;
-}
-
-.grid{
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
+button{
+    background-color: #0a0f2c9d;
+    border: none;
     margin: 10px;
+    border-radius: 5px;
 }
 
-.grid img{
-    width: 200px;
-    height: 200px;
-    margin: 10px;
-    /* ^padding or margin */
+button:hover{
+    background-color: #0a0f2c;
+    cursor: pointer;
 }
 
-.grid img:hover{
-    /* get hover effect ig */
-    border: #3d1c2a 2px solid;
+button img{
+    width: 50px;
+    height: 50px;
 }
 
 footer{
-    background-image: linear-gradient(#f59bd166, #f59bd166), url(../images/plants.jpg);
-    background-size: cover;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8));
     color: #fff;
     min-height: 50px;
-    padding-top: 20px;
     width: 100%;
+    font-size: small;
 }
 
 footer p{
     margin: 0;
     text-align: center;
-}
-
-@media (max-width: 1024px){
-    nav{
-        justify-content: right;
-    }
-    
-    nav ul{
-        position: fixed;
-        top: -100%;
-        left: 0;
-        padding-left: 0;
-        margin-top: 0;
-        flex-direction: column;
-        background-color: #58374b;
-        width: 100%;
-        border-radius: 5px;
-        text-align: center;
-        transition: 0.3s;
-        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
-    }
-
-    nav ul.active{
-        top: 0;
-    }
-
-    nav ul li a{
-        padding: 15px 0;
-    }
-
-    .nav-item{
-        display: inline-block;
-        width: 100%;
-        height: 100%;
-    }
-
-    .nav-link{
-        display: inline-block;
-        width: 100%;
-        height: 100%;
-    }
-
-    .nav-link:hover{
-        background-color: #3d1c2aa2;
-        width: 100%;
-        border-radius: 5px;
-    }
-
-    .hamburger{
-        display: block;
-        cursor: pointer;
-    }
-
-    .hamburger.active .bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    .hamburger.active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-
-    .hamburger.active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
-}
-
-@media (max-width: 600px){
 }
