--- a/assignment5/style.css
+++ b/assignment5/style.css
@@ -1,5 +1,5 @@
 nav{
-    padding: 10px;
+    padding: 20px;
     background-image: linear-gradient(#f59bd166, #f59bd166), url(/images/plants.jpg);
     background-size: cover;
     font-size: 1.3em;
@@ -21,7 +21,7 @@ ul{
 }
 
 img{
-    width: 90%;
+    width: 85%;
 }
 
 p{
@@ -32,4 +32,17 @@ p{
     margin: 30px;
 	--bs-accordion-active-color: #3d1c2a;
 	--bs-accordion-active-bg: #f59bd166;
+}
+
+.accordion-item{
+    width: 90%;
+    margin: auto;
+}
+
+.accordion-header{
+    margin: 0;
+}
+
+.accordion-button{
+    padding: 25px;
 }
