--- a/assignment6/style.css
+++ b/assignment6/style.css
@@ -1,21 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
-    background-color: #dce9f7;
     text-align: center;
+    font-family: "Afacad Flux", sans-serif;
+}
+
+header{
+    background-image: linear-gradient(#f59bd166, #f59bd166), url(/images/plants.jpg);
+    padding: 20px;
+    margin-bottom: 10px;
+    border-bottom: #3d1c2a 5px solid;
+}
+
+nav ul{
+    list-style: none;
+}
+
+nav a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.3em;
+    padding: 2px 10px;
+    border-radius: 5px;
+    border-radius: 5px;
+}
+
+nav a:hover{
+    background-color: #3d1c2a;
+}
+
+h1{
+    font-size: 3em;
+}
+
+#content{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 95%;
+    margin: 10px auto;
 }
 
 section {
-    display: inline-block;
-    max-width: 300px;  
-    border-color: black;
-    border-width: 1px;
-    border-style:none; 
-    padding:20px;
-    margin:10px;
+    padding: 20px;
+    margin: 10px;
     background-color: #F5F5F5;
     text-align: left;
-    box-shadow: 10px 10px lightblue;
 }
 
 footer{
-margin:40px;
+    margin:40px;
 }
