--- a/assignment6/style.css
+++ b/assignment6/style.css
@@ -51,8 +51,30 @@ section {
     margin: 10px;
     background-color: #F5F5F5;
     text-align: left;
+    max-height: 525px;
+    min-height: 525px;
+}
+
+section img{
+    max-height: 200px;
+    min-height: 200px;
+}
+
+section p:nth-of-type(2){
+    margin-bottom: 10px;
+}
+
+section p:nth-last-of-type(2){
+    max-height: 150px;
+    min-height: 150px;
+    overflow-y: auto;
 }
 
 footer{
-    margin:40px;
+    margin: 40px;
+}
+
+footer a{
+    text-decoration: none;
+    color: #000;
 }
