--- a/assignment7/elizabot/style.css
+++ b/assignment7/elizabot/style.css
@@ -89,3 +89,11 @@ tr, td{
     font-size: medium;
     margin-left: 10px;
 }
+
+.chatgpt{
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    margin-top: 30px;
+}
